--- a/modules/naboj/templates/base.tex
+++ b/modules/naboj/templates/base.tex
@@ -1,7 +1,5 @@
-\documentclass[12pt, twoside]{article}
+\documentclass[12pt, twoside]{dgs}
 
-\input{core/core.tex}
-\input{core/format.tex}
 \input{input/(* module.id *)/(* competition.id *)/static/format-override.tex}
 
 (@ block specific @)(@ endblock @)
