--- a/core/tex/utilities.tex
+++ b/core/tex/utilities.tex
@@ -44,8 +44,8 @@
         }{%
             \includegraphics[keepaspectratio = true, height = #4]{example-image-a}%
         }%
-        \notblank{#5}{\caption{\textit{#5}}}%
-        \notblank{#6}{\label{#6}}%
+        \ifstrempty{#5}{}{\caption{\textit{#5}}}%
+        \ifstrempty{#6}{}{\label{#6}}%
     \end{figure}%
 }
 
@@ -58,7 +58,7 @@
         }{%
             \includegraphics[keepaspectratio = true, height = #2]{example-image-a}%
         }%
-        \notblank{#3}{\caption{\textit{#3}}}%
+        \ifstrempty{#3}{}{\caption{\textit{#3}}}%
         \notblank{#4}{\label{#4}}%
     \end{figure}%
 }
