--- a/modules/naboj/templates/answers-mod5.tex
+++ b/modules/naboj/templates/answers-mod5.tex
@@ -13,9 +13,9 @@
         (@ for problem in modulo @)%
             \setcounter{volume}{(* volume.number *)}%
             \setcounter{problem}{(* problem.number *)}%
-            \RenewDocumentCommand{\problemDirectory}{}{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/(* problem.id *)}%
+            \RenewDocumentCommand{\activeDirectory}{}{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/(* problem.id *)}%
             \subsection{(* problem.number *)}%
-            \protectedInput{\problemDirectory/answer.tex}%
+            \protectedInput{\activeDirectory/answer.tex}%
         (@ endfor @)
     (@ endfor @)
 (@ endblock @)    
