Huge tidying up

--- a/modules/scholar/format-handout.tex
+++ b/modules/scholar/format-handout.tex
@@ -7,7 +7,7 @@
 }
 
 \fancypagestyle{handout}{
-    \pagestyle{main}
+    \pagestyle{scholar}
     \fancyhead[L]{\textit{(* handout.course.name *)}}
     \fancyhead[R]{\textit{(* handout.tutorial.date *)}}
     \fancyfoot[C]{\small \thepage/\pageref*{LastPage}}
