--- a/modules/scholar/format-handout.tex
+++ b/modules/scholar/format-handout.tex
@@ -8,8 +8,8 @@
 
 \fancypagestyle{handout}{
     \pagestyle{scholar}
-    \fancyhead[L]{\textit{(* handout.course.name *)}}
-    \fancyhead[R]{\textit{(* handout.tutorial.date *)}}
+    \fancyhead[L]{\textit{(* course.name *)}}
+    \fancyhead[R]{\textit{(* lesson.date *)}}
     \fancyfoot[C]{\small \thepage/\pageref*{LastPage}}
     
     \titleformat{\section}[hang]{\centering\LARGE}{}{0pt}{}
