--- a/modules/scholar/templates/handout.tex
+++ b/modules/scholar/templates/handout.tex
@@ -1,8 +1,9 @@
 \documentclass[12pt, twoside]{dgs}
 
-\input{input/scholar/(* course *)/static/format-override.tex}
+\input{input/scholar/format-handout.tex}
+\input{input/scholar/(* course.id *)/static/format-override.tex}
  
 \begin{document}
     \pagestyle{handout}
-    \input{input/scholar/(* course *)/(* 2018 *)/handout/(* lesson *)/content.tex}
+    \input{input/scholar/(* course.id *)/2018/handout/(* lesson.id *)/content.tex}
 \end{document}
