Another day's work

--- a/modules/scholar/format-homework.tex
+++ b/modules/scholar/format-homework.tex
@@ -19,6 +19,6 @@
     \titleformat{\subsection}[hang]{\bfseries\large}{\bfseries\large\thesubsection}{6pt}{}
     \titleformat{\subsubsection}[hang]{\bfseries}{\thesubsubsection}{6pt}{}[]
     \titlespacing{\section}{0pt}{0pt}{0pt}
-    \titlespacing{\subsection}{0pt}{4mm}{0pt}
-    \titlespacing{\subsubsection}{0pt}{1mm}{0pt}
+    \titlespacing{\subsection}{0pt}{8pt}{0pt}
+    \titlespacing{\subsubsection}{0pt}{4pt}{0pt}
 }
