First try classes

--- a/modules/scholar/format-homework.tex
+++ b/modules/scholar/format-homework.tex
@@ -11,7 +11,7 @@
 \fancypagestyle{handout}{
     \pagestyle{scholar}
     \fancyhead[L]{\textit{(* course.name *)}}
-    \fancyhead[R]{\textit{Cvičenie č. (* lesson.number *), (* lesson.date|isotex *)}}
+    \fancyhead[R]{\textit{Domáca úloha č. (* issue.number *), deadline (* issue.deadline|isotex *)}}
 
     \renewcommand{\thesubsubsection}{\thesubsection\alph{subsubsection}}
     
