--- a/modules/scholar/format-handout.tex
+++ b/modules/scholar/format-handout.tex
@@ -11,7 +11,7 @@
 \fancypagestyle{handout}{
     \pagestyle{scholar}
     \fancyhead[L]{\textit{(* course.name *)}}
-    \fancyhead[R]{\textit{Cvičenie č. (* lesson.number *), (* lesson.date|isotex *)}}
+    \fancyhead[R]{\textit{Cvičenie č. (* issue.number *), (* issue.date.strftime('%d. %m. %Y') *)}}
 
     \renewcommand{\thesubsubsection}{\thesubsection\alph{subsubsection}}
     
