--- a/modules/scholar/templates/handout.tex
+++ b/modules/scholar/templates/handout.tex
@@ -1,11 +1,11 @@
 \documentclass[12pt, twoside]{dgs}
 
 \input{input/scholar/(* course.id *)/static/format-override.tex}
-\input{input/scholar/(* course.id *)/(* year.id *)/handout/(* lesson.id *)/format-handout.tex}
+\input{input/scholar/(* course.id *)/(* year.id *)/handouts/(* issue.id *)/format-handout.tex}
  
 \begin{document}
     \pagestyle{handout}
-    \setcounter{section}{(* lesson.number - 1 *)}
-    \section{Cvičenie č. (* lesson.number *)}
-    \input{input/scholar/(* course.id *)/(* year.id *)/handout/(* lesson.id *)/content.tex}
+    \setcounter{section}{(* issue.number - 1 *)}
+    \section{Cvičenie č. (* issue.number *)}
+    \input{input/scholar/(* course.id *)/(* year.id *)/handouts/(* issue.id *)/content.tex}
 \end{document}
