--- a/modules/scholar/templates/handout.tex
+++ b/modules/scholar/templates/handout.tex
@@ -6,7 +6,7 @@
 \begin{document}
     \pagestyle{handout}
     \setcounter{section}{(* issue.number - 1 *)}
-    \RenewDocumentCommand{\activeDirectory}{}{\rootDirectory/(* module.id *)/(* course.id *)/(* year.id *)/handouts/(* issue.id *)/}%
+    \RenewDocumentCommand{\activeDirectory}{}{\rootDirectory/(* module.id *)/(* course.id *)/(* year.id *)/handouts/(* issue.id *)}%
     \section{Cvičenie č. (* issue.number *)}
     \input{input/scholar/(* course.id *)/(* year.id *)/handouts/(* issue.id *)/content.tex}
 \end{document}
