--- a/core/tex/hacks.tex
+++ b/core/tex/hacks.tex
@@ -6,6 +6,7 @@
 % Fixes mathspec bug -- URL numbers are rendered with wrong font
     \ernewcommand\eu@MathPunctuation@symfont{Latin:m:n}
     \DeclareMathSymbol{,}{\mathpunct}{\eu@MathPunctuation@symfont}{`,}
+    \DeclareMathSymbol{?}{\mathpunct}{\eu@MathPunctuation@symfont}{`?}
     \DeclareMathSymbol{.}{\mathord}{\eu@MathPunctuation@symfont}{`.}
     \DeclareMathSymbol{<}{\mathrel}{\eu@MathPunctuation@symfont}{`<}
     \DeclareMathSymbol{>}{\mathrel}{\eu@MathPunctuation@symfont}{`>}
