--- a/modules/scholar/templates/homework.tex
+++ b/modules/scholar/templates/homework.tex
@@ -6,6 +6,7 @@
 \begin{document}
     \pagestyle{handout}
     \setcounter{section}{(* issue.number - 1 *)}
+    \RenewDocumentCommand{\activeDirectory}{}{\rootDirectory/(* module.id *)/(* course.id *)/(* year.id *)/handouts/(* issue.id *)}%
     \section{Domáca úloha č. (* issue.number *)}
     \begin{center}
         \textit{%
