--- a/core/tex/utilities.tex
+++ b/core/tex/utilities.tex
@@ -79,7 +79,8 @@
 \NewDocumentCommand{\IIInt}{O{} O{} m m m m}{\iiint\limits_{#1}^{#2} #3 \diff#4\diff#5\diff#6}
 
 \NewDocumentCommand{\Lim}{m m}{\lim\limits_{#1 \rightarrow #2}}
-
+\NewDocumentCommand{\Exp}{m}{\mathrm{e}^{#1}}
+\NewDocumentCommand{\mustequal}{}{\overset{!}{=}}
 
 
 % \exampleIO[verbatim input][verbatim output]
