--- a/core/tex/utilities.tex
+++ b/core/tex/utilities.tex
@@ -76,7 +76,7 @@
 
 \NewDocumentCommand{\Int}{O{} O{} m m}{\kern -0.2em \int\limits_{#1}^{#2} #3 \, \diff#4}
 \NewDocumentCommand{\Intx}{O{} O{} m}{\kern -0.2em \int\limits_{#1}^{#2} #3}
-\NewDocumentCommand{\OInt}{O{} O{} m m}{\kern -0.2em \int\limits_{#1}^{#2} #3 \, \diff#4}
+\NewDocumentCommand{\OInt}{O{} O{} m m}{\kern -0.2em \oint\limits_{#1}^{#2} #3 \, \diff#4}
 \NewDocumentCommand{\IInt}{O{} O{} m m m}{\iint\limits_{#1}^{\quad#2} #3 \diff#4\diff#5}
 \NewDocumentCommand{\OIInt}{O{} O{} m m}{\oiint\limits_{#1}^{\quad#2} #3 \diff#4}
 \NewDocumentCommand{\IIInt}{O{} O{} m m m m}{\iiint\limits_{#1}^{#2} #3 \diff#4\diff#5\diff#6}
