Added global i18n for Náboj language

--- a/modules/naboj/format.tex
+++ b/modules/naboj/format.tex
@@ -1,4 +1,4 @@
-% DeGeŠ seminar style file
+% DeGeŠ naboj style file
 
 \numberwithin{equation}{subsection}
 \renewcommand{\theequation}{\arabic{problem}.\arabic{equation}}
