--- a/modules/naboj/templates/answers-mod5.tex
+++ b/modules/naboj/templates/answers-mod5.tex
@@ -7,7 +7,7 @@
    
     \section{(* i18n.section.answers *)}
     \pagestyle{answers}
-    (@ for modulo in volume.problemsMod @)
+    (@ for modulo in volume.problemsMod5 @)
         \newpage%
         \section{Modulo (* loop.index0 *)}
         (@ for problem in modulo @)%
