--- a/modules/naboj/templates/tearoff.tex
+++ b/modules/naboj/templates/tearoff.tex
@@ -11,7 +11,7 @@
                 \RenewDocumentCommand{\activeDirectory}{}{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* team.language *)/(* problem.id *)}%
                 \begin{minipage}[t][91mm][t]{\textwidth}%
                     \begin{minipage}[t][81mm][t]{0.875\linewidth}\vspace{0pt}%
-                        \subsection{(* problem.number *)}%
+                        \subsection{\texorpdfstring{(* problem.number *)}{(* problem.number *). (* problem.id *)}}%
                         \setlength{\parskip}{6pt}
                         \protectedInput{\activeDirectory/problem.tex}%
                     \end{minipage}%
