--- a/modules/naboj/templates/i18n/russian.yaml
+++ b/modules/naboj/templates/i18n/russian.yaml
@@ -1,24 +1,25 @@
 section:
-    problems:           'Zadání'
-    solutions:          'Vzorová řešení'
-    answers:            'Výsledky'
-    constants:          'Tabulka konstant'
-    instructions:       'Pokyny'
+    problems:           'Задания'
+    solutions:          'Образцы решений'
+    answers:            'Решения'
+    constants:          'Таблица констант'
+    instructions:       'Указания'
 caption:
-    table:              'Tabulka'
-    figure:             'Obrázek'
+    table:              'Таблица'
+    figure:             'Картинка'
 competition:
     name:
-        nominative:     'Fyzikální Náboj'
-        genitive:       'Fyzikálního Náboje'
+        nominative:     'Физический Náboj'
+        genitive:       'Физикального Náboja'
     email:              'info-cz@physics.naboj.org'
     website:            'https://physics.naboj.org/'
-team:                   'Tým'
+team:                   'Команда'
 constants:
-    title:              'Tabulka konstant'
-    instruction:        'Během soutěže doporučujeme používat hodnoty konstant z~této tabulky. Výsledek získaný s použitím přesnějších hodnot Vám určitě \textbf{bude} uznán.'
-    constant:           'Konstanta'
-    symbol:             'Značka'
-    value:              'Hodnota'
+    title:              'Таблица констант'
+    instruction:        'В течение соревнования рекомендуем пользоваться константами с этой таблицы. Решение полученное при помощи более точных величин Вам тоже примут.'
+    constant:           'Константа'
+    symbol:             'Символ'
+    value:              'Величина'
 instructions:
-    title:              'Pokyny' 
+    title:              'Инструкции' 
+
