--- a/modules/naboj/templates/answers-mod5.tex
+++ b/modules/naboj/templates/answers-mod5.tex
@@ -9,7 +9,7 @@
     \pagestyle{answers}
     (@ for modulo in volume.problemsMod5 @)
         \newpage%
-        \section{Modulo (* loop.index0 *)}
+        \section{(* i18n.section.modulo *) (* loop.index0 *)}
         (@ for problem in modulo @)%
             \setcounter{volume}{(* volume.number *)}%
             \setcounter{problem}{(* problem.number *)}%
