--- a/modules/naboj/templates/i18n/czech.yaml
+++ b/modules/naboj/templates/i18n/czech.yaml
@@ -4,6 +4,7 @@ section:
     answers:            'Výsledky'
     constants:          'Tabulka konstant'
     instructions:       'Pokyny'
+    modulo:             'Modulo'
 caption:
     table:              'Tabulka'
     figure:             'Obrázek'
