--- a/modules/naboj/templates/i18n/polish.yaml
+++ b/modules/naboj/templates/i18n/polish.yaml
@@ -4,6 +4,7 @@ section:
     answers:            'Odpowiedzi'
     constants:          'Tabela stałych'
     instructions:       'Instrukcje'
+    modulo:             'Modulo'
 caption:
     table:              'Tabela'
     figure:             'Figura'
