--- a/modules/naboj/templates/i18n/russian.yaml
+++ b/modules/naboj/templates/i18n/russian.yaml
@@ -4,6 +4,7 @@ section:
     answers:            'Решения'
     constants:          'Таблица констант'
     instructions:       'Указания'
+    modulo:             'Остаток от деления'
 caption:
     table:              'Таблица'
     figure:             'Картинка'
