--- a/modules/naboj/templates/i18n/slovak.yaml
+++ b/modules/naboj/templates/i18n/slovak.yaml
@@ -4,6 +4,7 @@ section:
     answers:            'Výsledky'
     constants:          'Tabuľka konštánt'
     instructions:       'Pokyny'
+    modulo:             'Zvyšok'
 caption:
     table:              'Tabuľka'
     figure:             'Obrázok'
