Náboj post-mortem

--- a/modules/naboj/templates/base-languages.tex
+++ b/modules/naboj/templates/base-languages.tex
@@ -3,4 +3,5 @@
 (@ block specific @)
     \input{core/i18n/(* language.id *).tex}
     \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/format.tex}
+    \setmainlanguage{(* language.id *)}
 (@ endblock @)
