--- a/modules/naboj/templates/i18n/polish.yaml
+++ b/modules/naboj/templates/i18n/polish.yaml
@@ -17,7 +17,7 @@ competition:
 team:                   'Zespół'
 constants:
     title:              'Tabela stałych'
-    instruction:        'We recommend to use these values of constants during the competition. However, results calculated with more precise values of these constants \textbf{will} be accepted.'
+    instruction:        'Podczas zawodów zalecamy stosowanie podanych wartości stałych fizycznych. Jednak wyniki obliczone z dokładniejszymi wartościami \textbf{będą} akceptowane.'
     constant:           'Stała'
     symbol:             'Oznaczenie'
     value:              'Wartość'
