--- a/modules/naboj/templates/i18n/slovak.yaml
+++ b/modules/naboj/templates/i18n/slovak.yaml
@@ -23,3 +23,5 @@ constants:
     value:              'Hodnota'
 instructions:
     title:              'Pokyny'
+envelope:
+    donotopen:          'Neotvárajte túto obálku pre začiatkom súťaže.'
