Added envelope translations, reworked, canned recipes

--- a/modules/naboj/templates/i18n/czech.yaml
+++ b/modules/naboj/templates/i18n/czech.yaml
@@ -23,3 +23,5 @@ constants:
     value:              'Hodnota'
 instructions:
     title:              'Pokyny' 
+envelope:
+    donotopen:          'Do not open this envelope before the competition starts.'
