--- a/modules/naboj/templates/i18n/polish.yaml
+++ b/modules/naboj/templates/i18n/polish.yaml
@@ -23,3 +23,5 @@ constants:
     value:              'Wartość'
 instructions:
     title:              'Instrukcje' 
+envelope:
+    donotopen:          'Do not open this envelope before the competition starts. TRANSLATE'
