--- a/modules/naboj/templates/i18n/slovak.yaml
+++ b/modules/naboj/templates/i18n/slovak.yaml
@@ -24,4 +24,4 @@ constants:
 instructions:
     title:              'Pokyny'
 envelope:
-    donotopen:          'Neotvárajte túto obálku pre začiatkom súťaže.'
+    donotopen:          'Neotvárajte túto obálku pred začiatkom súťaže.'
