--- a/modules/naboj/templates/envelope.tex
+++ b/modules/naboj/templates/envelope.tex
@@ -1,12 +1,25 @@
 (@ extends 'base-venues.tex' @)
 
+(@ block specific @)
+    \geometry{paper = c5paper, landscape}
+(@ endblock @)
+
 (@ block content @)
+    \pagestyle{empty}
+    \centering
+
     (@ for team in venue.teams @)
-        \fontsize{120}{0}\selectfont(* '%03d'|format(team.id) *)
-
-        \fontsize{30}{0}\selectfont(* team.name *)
-
-        (* i18n.envelope.donotopen *)
+        \vspace*{10mm}
+        \fontsize{120}{0}\selectfont
+        (* '%03d'|format(team.id) *)
+        
+        \vspace{10mm}
+        \fontsize{15}{0}\selectfont
+        (* team.name *)
+                
+        \vspace{30mm}
+        \normalsize
+        (* i18n.get(team.language).envelope.donotopen *)
         \newpage
     (@ endfor @)
 (@ endblock @)
