Added switchable sections, duct-taped Russian

--- a/core/tex/fonts.tex
+++ b/core/tex/fonts.tex
@@ -10,7 +10,6 @@
 
 \defaultfontfeatures{
     Mapping         = tex-text,
-    Scale           = MatchLowercase,
     Ligatures       = TeX
 }
 
@@ -34,6 +33,7 @@
 
 \setmonofont[
     Path            = core/fonts/UbuntuMono/ ,
+    Scale           = 0.9,
     Extension       = .ttf ,
     UprightFont     = *-r ,
     BoldFont        = *-b ,
@@ -52,6 +52,7 @@
 
 \setsansfont[
     Path            = core/fonts/ ,
+    Scale           = 0.9,
     Extension       = .ttf ,
     UprightFont     = *-r ,
     BoldFont        = *-b ,
