--- a/core/tex/utilities.tex
+++ b/core/tex/utilities.tex
@@ -84,6 +84,7 @@
 
 \NewDocumentCommand{\Lim}{m m}{\lim\limits_{#1 \rightarrow #2}}
 \NewDocumentCommand{\Exp}{m}{\mathrm{e}^{#1}}
+\NewDocumentCommand{\LogTen}{}{\log_{10}}
 \NewDocumentCommand{\mustequal}{}{\overset{!}{=}}
 
 \NewDocumentCommand{\Sum}{O{} O{} m}{\sum\limits_{#1}^{#2} #3}
