Massive template overhaul, WiP

--- a/modules/scholar/format/base.tex
+++ b/modules/scholar/format/base.tex
@@ -1,4 +1,4 @@
-% DeGeŠ style file
+% DGS style file for `scholar` module
 
 \setcounter{secnumdepth}{1}
 
@@ -6,12 +6,6 @@
     \fancyhf{}
     \fancyhead[C]{\textit{(* course.name *)}}
     \fancyfoot[C]{\small \thepage/\pageref*{LastPage}}
-}
-
-\fancypagestyle{handout}{
-    \pagestyle{scholar}
-    \fancyhead[L]{\textit{Cvičenie č. (* issue.number *)}}
-    \fancyhead[R]{\textit{(* issue.date.strftime('%d. %m. %Y') *)}}
 
     \titleformat{\section}[block]{\LARGE\bfseries\centering}{}{0pt}{}
     \titleformat{\subsection}[hang]{\bfseries\large}{\bfseries\large\thesubsection}{6pt}{}
