--- a/modules/scholar/templates/homework.tex
+++ b/modules/scholar/templates/homework.tex
@@ -1,10 +1,11 @@
 \documentclass[12pt, twoside]{dgs}
 
 \input{input/scholar/(* course.id *)/static/format-override.tex}
+\input{input/scholar/(* course.id *)/(* year.id *)/homework/(* issue.id *)/format.tex}
 \input{input/scholar/(* course.id *)/(* year.id *)/homework/(* issue.id *)/format-homework.tex}
  
 \begin{document}
-    \pagestyle{handout}
+    \pagestyle{homework}
     \setcounter{section}{(* issue.number - 1 *)}
     \RenewDocumentCommand{\activeDirectory}{}{\rootDirectory/(* module.id *)/(* course.id *)/(* year.id *)/homework/(* issue.id *)}%
     \section{Domáca úloha č. (* issue.number *)}
