--- a/modules/naboj/templates/base-languages.tex
+++ b/modules/naboj/templates/base-languages.tex
@@ -2,6 +2,6 @@
 
 (@ block specific @)
     \input{core/i18n/(* language.id *).tex}
-    \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/format.tex}
+    \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/format-language.tex}
     \setmainlanguage{(* language.id *)}
 (@ endblock @)
