--- a/modules/scholar/templates/homework.tex
+++ b/modules/scholar/templates/homework.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt, twoside]{dgs}
 
 \input{input/scholar/(* course.id *)/static/format-override.tex}
-\input{input/scholar/(* course.id *)/(* year.id *)/homework/(* issue.id *)/format.tex}
+\input{input/scholar/(* course.id *)/(* year.id *)/homework/(* issue.id *)/format-base.tex}
 \input{input/scholar/(* course.id *)/(* year.id *)/homework/(* issue.id *)/format-homework.tex}
  
 \begin{document}
