--- a/modules/scholar/templates/handout.tex
+++ b/modules/scholar/templates/handout.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt, twoside]{dgs}
 
 \input{input/scholar/(* course.id *)/static/format-override.tex}
-\input{input/scholar/(* course.id *)/(* year.id *)/handouts/(* issue.id *)/format-base.tex}
+\input{input/scholar/(* course.id *)/(* year.id *)/handouts/(* issue.id *)/format-course.tex}
 \input{input/scholar/(* course.id *)/(* year.id *)/handouts/(* issue.id *)/format-handout.tex}
  
 \begin{document}
