--- a/core/tex/utilities.tex
+++ b/core/tex/utilities.tex
@@ -7,6 +7,7 @@
 \DeclareSIUnit{\pixel}{px}
 \DeclareSIUnit{\year}{y}
 \DeclareSIUnit{\eur}{€}
+\DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_\odot}}
 
 \NewDocumentCommand{\errorMessage}{+m}{\colorbox{red}{#1}}
 \NewDocumentCommand{\todoMessage}{+m}{\colorbox{cyan}{#1}}
