--- a/core/tex/utilities.tex
+++ b/core/tex/utilities.tex
@@ -8,6 +8,7 @@
 \DeclareSIUnit{\year}{y}
 \DeclareSIUnit{\eur}{€}
 \DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_\odot}}
+\DeclareSIUnit{\earthmass}{\ensuremath{\mathrm{M}_\oplus}}
 
 \NewDocumentCommand{\errorMessage}{+m}{\colorbox{red}{#1}}
 \NewDocumentCommand{\todoMessage}{+m}{\colorbox{cyan}{#1}}
