Fixed partial symbol

--- a/core/tex/hacks.tex
+++ b/core/tex/hacks.tex
@@ -11,6 +11,7 @@
     \DeclareMathSymbol{<}{\mathrel}{\eu@MathPunctuation@symfont}{`<}
     \DeclareMathSymbol{>}{\mathrel}{\eu@MathPunctuation@symfont}{`>}
     \DeclareMathSymbol{/}{\mathord}{\eu@MathPunctuation@symfont}{`/}
+    \XeTeXDeclareMathSymbol{^^^^2202}{\mathinner}{\eu@MathPunctuation@symfont}{"2202}[\partial]
     \DeclareMathSymbol{;}{\mathpunct}{\eu@MathPunctuation@symfont}{`;}
     \XeTeXDeclareMathSymbol{^^^^2026}{\mathinner}{\eu@MathPunctuation@symfont}{"2026}[\mathellipsis]
     \DeclareMathSymbol{0}{\mathalpha}{\eu@DigitsArabic@symfont}{`0}
@@ -23,7 +24,6 @@
     \DeclareMathSymbol{7}{\mathalpha}{\eu@DigitsArabic@symfont}{`7}
     \DeclareMathSymbol{8}{\mathalpha}{\eu@DigitsArabic@symfont}{`8}
     \DeclareMathSymbol{9}{\mathalpha}{\eu@DigitsArabic@symfont}{`9}
-    \DeclareMathSymbol{,}{\mathpunct}{\eu@MathPunctuation@symfont}{`,}
 \makeatother
 
 % Fix Pandoc's tightlist problem
