--- a/core/tex/utilities.tex
+++ b/core/tex/utilities.tex
@@ -75,7 +75,7 @@
 \NewDocumentCommand{\DerivativeN}{m m m}{\frac{\diff^{\,#1}\!#2}{\diff#3}}
 \NewDocumentCommand{\DerivativeEval}{m m m}{\left.\frac{\diff#1}{\diff#2}\right|_{#2 = #3}}
 \NewDocumentCommand{\DerivativeNEval}{m m m m}{\left.\frac{\diff^{\,#1}\!#2}{\diff#3}\right|_{#3 = #4}}
-\NewDocumentCommand{\pderive}{O{} m m}{\frac{\partial^{#1}#2}{\partial #3^{#1}}}
+\NewDocumentCommand{\PDerivative}{O{} m m}{\frac{\partial^{#1}#2}{\partial #3^{#1}}}
 
 \NewDocumentCommand{\Int}{O{} O{} m m}{\kern -0.2em \int\limits_{#1}^{#2} #3 \, \diff#4}
 \NewDocumentCommand{\Intx}{O{} O{} m}{\kern -0.2em \int\limits_{#1}^{#2} #3}
