Added cancel package

--- a/core/tex/dgs.cls
+++ b/core/tex/dgs.cls
@@ -36,6 +36,7 @@
 \RequirePackage{longtable}
 \RequirePackage{etoolbox}
 \RequirePackage{MnSymbol}
+\RequirePackage{cancel}
 \RequirePackage{fancyhdr}
 \RequirePackage{hyphenat}
 \RequirePackage{pifont}
