--- a/modules/scholar/templates/handout-base.tex
+++ b/modules/scholar/templates/handout-base.tex
@@ -8,6 +8,7 @@
     \pagestyle{handout}
     \setcounter{section}{(* issue.number - 1 *)}
     \RenewDocumentCommand{\activeDirectory}{}{\rootDirectory/(* module.id *)/(* course.id *)/(* year.id *)/handouts/(* issue.id *)/}%
-    \section{Cvičenie č. (* issue.number *)}
-    \input{input/scholar/(* course.id *)/(* year.id *)/handouts/(* issue.id *)/content.tex}
+    \section{Cvičenie č. (* issue.number *)(@ block subtitle @)(@ endblock subtitle @)}
+    (@ block content @)(@ endblock content @)
+    (@ block solutions @)(@ endblock solutions @)
 \end{document}
