--- a/core/tex/utilities.tex
+++ b/core/tex/utilities.tex
@@ -8,6 +8,7 @@
 \DeclareSIUnit{\year}{y}
 \DeclareSIUnit{\eur}{€}
 \DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_\odot}}
+\DeclareSIUnit{\solarluminosity}{\ensuremath{\mathrm{L}_\odot}}
 \DeclareSIUnit{\earthmass}{\ensuremath{\mathrm{M}_\oplus}}
 
 \NewDocumentCommand{\errorMessage}{+m}{\colorbox{red}{#1}}
@@ -88,6 +89,7 @@
 \NewDocumentCommand{\Exp}{m}{\mathrm{e}^{#1}}
 \NewDocumentCommand{\LogTen}{}{\log_{10}}
 \NewDocumentCommand{\mustequal}{}{\overset{!}{=}}
+\NewDocumentCommand{\Nuclide}{O{} O{} m}{\ensuremath{\leftidx{^{#1}_{#2}}{\mathrm{#3}}{}}}
 
 \NewDocumentCommand{\Sum}{O{} O{} m}{\sum\limits_{#1}^{#2} #3}
 \NewDocumentCommand{\Abs}{m}{\left|#1\right|}
