--- a/core/tex/utilities.tex
+++ b/core/tex/utilities.tex
@@ -92,6 +92,7 @@
 \NewDocumentCommand{\Nuclide}{O{} O{} m}{\ensuremath{\leftidx{^{#1}_{#2}}{\mathrm{#3}}{}}}
 
 \NewDocumentCommand{\Sum}{O{} O{} m}{\sum\limits_{#1}^{#2} #3}
+\NewDocumentCommand{\Product}{O{} O{} m}{\prod\limits_{#1}^{#2} #3}
 \NewDocumentCommand{\Abs}{m}{\left|#1\right|}
 \RenewDocumentCommand{\Hat}{m}{#1\kern-0.1em\hat{\phantom{#1}}}
 
