Simplified `all` targets, broken up tex files a bit

--- a/core/tex/dgs.cls
+++ b/core/tex/dgs.cls
@@ -117,5 +117,6 @@
 
 \input{core/tex/fonts.tex}
 \input{core/tex/utilities.tex}
+\input{core/tex/math.tex}
 \input{core/tex/hacks.tex}
 \input{core/tex/siunitx.tex}
