--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -16,3 +16,11 @@
     retain-explicit-plus    = true,                         % zachovávame explicitné +
 }
 
+\DeclareSIUnit{\gforce}{g}
+\DeclareSIUnit{\year}{y}
+\DeclareSIUnit{\au}{AU}
+\DeclareSIUnit{\pixel}{px}
+\DeclareSIUnit{\eur}{€}
+\DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_\odot}}
+\DeclareSIUnit{\solarluminosity}{\ensuremath{\mathrm{L}_\odot}}
+\DeclareSIUnit{\earthmass}{\ensuremath{\mathrm{M}_\oplus}}
