--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -2,6 +2,7 @@
 \DeclareMathOperator{\pdiff}{\partial\!}
 \DeclareMathOperator{\fdiff}{\Delta\!}
 
+\NewDocumentCommand{\DerivativeE}{m}{\frac{\diff}{\diff#1}}
 \NewDocumentCommand{\Derivative}{m m}{\frac{\diff#1}{\diff#2}}
 \NewDocumentCommand{\DerivativeN}{m m m}{\frac{\diff^{\,#1}\!#2}{\diff#3}}
 \NewDocumentCommand{\DerivativeEval}{m m m}{\left.\frac{\diff#1}{\diff#2}\right|_{#2 = #3}}
@@ -27,3 +28,5 @@
 \NewDocumentCommand{\Product}{O{} O{} m}{\prod\limits_{#1}^{#2} #3}
 \NewDocumentCommand{\Abs}{m}{\left|#1\right|}
 \RenewDocumentCommand{\Hat}{m}{#1\kern-0.1em\hat{\phantom{#1}}}
+
+\NewDocumentCommand{\Angle}{}{\text{\AngleSign}}
